argocd-bootstrap-cluster/longhorn-storage.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  annotations:
    traefik.ingress.kubernetes.io/rewrite-target: /longhorn
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/longhorn"
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
