argocd-bootstrap-cluster/prometheus-grafana.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-grafana
  namespace: monitoring
spec:
  entryPoints:
    - https
  routes:
    - kind: Rule
      match: Host(`grafana.tsebra-home.de`)
      services:
        - name: prometheus-grafana
          port: 80
  tls:
    certResolver: default
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  entryPoints:
    - https
  routes:
    - kind: Rule
      match: Host(`prometheus.tsebra-home.de`)
      services:
        - name: prometheus-grafana-kube-pr-prometheus
          port: 8080
  tls:
    certResolver: default
